syntax = "proto3";

package pb;



//The Transaction service definition.
service Transaction {
 rpc AssignAssetsToWallet (AssignAssetsToWalletRequest) returns (AssignAssetsToWalletReply);
}

message SimpleAsset {
 string AssetID = 1;
 string symbol  = 2;
 bool   status  = 3;
 string Identify = 4;
 uint64 Decimal = 5;
}

message AssignAssetsToWalletRequest {
           string address = 1;
  repeated SimpleAsset SimpleAssets = 2;
}

message AssignAssetsToWalletReply {}
